[tool.poetry]
name = "pytorch-test"
version = "0.1.0"
description = ""
authors = ["digital-monad <rohan.nittur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.0"
torchvision = "^0.19.0"
notebook = "^7.2.1"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
